[package]
name = "composer"
version = "2.0.0"
edition = "2021"
authors = ["Sam Ruff - sam@technesci.co.uk"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
regex = "1.7.1"
relative-path = "1.7.3"
log = "0.4.14"
env_logger = "0.10.0"
pretty_env_logger = "0.4.0"
gitignore = "1.0.7"
random-string = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.17"
minijinja = "0.30.5"
clap = "4.1.8"
anyhow = "1.0.69"
clap-verbosity-flag = "2.0.0"
once_cell = "1.17.1"
owo-colors = { version = "3.5.0", features = ["supports-colors"] }

[dev-dependencies]
assert_matches = "1.5.0"
