[package]
name = "composer"
version = "2.0.0"
edition = "2021"
authors = ["Sam Ruff - sam@bytesquid.com", "Ryan Brogden - ryan@bytesquid.com"]
readme = "README.md"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
regex = "1.7.1"
relative-path = "1.7.3"
log = "0.4.14"
env_logger = "0.10.0"
pretty_env_logger = "0.4.0"
gitignore = "1.0.7"
random-string = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.17"
minijinja = "0.30.5"
clap = "4.1.8"
anyhow = "1.0.69"
clap-verbosity-flag = "2.0.0"
once_cell = "1.17.1"
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
petname = "1.1.3"
walkdir = "2.3.2"
dirs = "4.0.0"
prettyprint = "0.8.1"
serde_json = "1.0.94"
serial_test = "1.0.0"

[dev-dependencies]
assert_matches = "1.5.0"
tempfile = "3.2"
